Fix z-indexes

--- a/public/sass/blocks/main-header.scss
+++ b/public/sass/blocks/main-header.scss
@@ -5,7 +5,7 @@
 .main-header {
   background: white;
   position: fixed;
-  z-index: 15;
+  z-index: 12;
   width: 100%;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
   animation: moving-top 0.4s;
